Fix for overflow

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+  overflow: hidden !important;
 }
 
 body:before {
